@@ -1,6 +1,11 @@
 package org.example.hansabal.domain.product.service;
 
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.example.hansabal.common.exception.BizException;
+import org.example.hansabal.domain.product.dto.response.ShopItem;
+import org.example.hansabal.domain.product.exception.ProductErrorCode;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import java.io.*;
 import java.net.HttpURLConnection;
@@ -8,45 +13,35 @@ import java.net.URL;
 import java.net.URLEncoder;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class ShopSearchService {
 
-    String clientId = "oZzdyk_N0TEa6HyXjfwg";
-    String clientSecret = "j_3pQgBaa0";
+    @Value("${naver.api.client-id}")
+    private String clientId;
 
-    private final ObjectMapper objectMapper = new ObjectMapper();
+    @Value("${naver.api.client-secret}")
+    private String clientSecret;
 
-    public static class ShopItem {
-        private String title;
-        private String lprice;
-
-        public ShopItem(String title, String lprice) {
-            this.title = title;
-            this.lprice = lprice;
-        }
-
-        public String getTitle() {
-            return title;
-        }
-
-        public String getLprice() {
-            return lprice;
-        }
-    }
+    private final ObjectMapper objectMapper;
 
     public List<ShopItem> searchShop(String query) {
         try {
-            String encodedQuery = URLEncoder.encode(query, "UTF-8");
+            String encodedQuery = URLEncoder.encode(query, StandardCharsets.UTF_8);
             String apiUrl = "https://openapi.naver.com/v1/search/shop?query=" + encodedQuery;
 
             HttpURLConnection con = (HttpURLConnection) new URL(apiUrl).openConnection();
             con.setRequestMethod("GET");
             con.setRequestProperty("X-Naver-Client-Id", clientId);
             con.setRequestProperty("X-Naver-Client-Secret", clientSecret);
+            con.setConnectTimeout(5000);
+            con.setReadTimeout(10000);
 
             int responseCode = con.getResponseCode();
             InputStream inputStream = (responseCode == 200) ? con.getInputStream() : con.getErrorStream();
@@ -63,20 +58,22 @@ public class ShopSearchService {
                 items.add(new ShopItem(title, lprice));
             }
             return items;
-
-        } catch (IOException e) {
-            throw new RuntimeException("네이버 쇼핑 API 호출 실패", e);
+        } catch (Exception e) {
+            throw new BizException(ProductErrorCode.FAILED_NAVER);
         }
     }
 
-    private String readBody(InputStream body) throws IOException {
-        try (BufferedReader reader = new BufferedReader(new InputStreamReader(body))) {
+    private String readBody(InputStream body){
+        try (BufferedReader reader = new BufferedReader(
+                new InputStreamReader(body, StandardCharsets.UTF_8))) {
             StringBuilder responseBody = new StringBuilder();
             String line;
             while ((line = reader.readLine()) != null) {
                 responseBody.append(line);
             }
             return responseBody.toString();
+        } catch (Exception e) {
+            throw new BizException(ProductErrorCode.FAILED_NAVER);
         }
     }
 }
